kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__manual_thread_name_status_surfaces.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "format!(\"transcript:\\n{transcript}\\nfooter:\\n{footer}\\ntitle: {title}\")"
---
transcript:

footer:
› Ask Kodex to do anything

  GPT-5.6-Sol default · /tmp/project · review-fix
title: review-fix | project
